<resources>
    <string name="app_name">Instajram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Enter</string>
    <string name="login">Login</string>
    <string name="daftar">SignUp</string>
    <string name="name">Name</string>
    <string name="kamera">Gallery</string>
    <string name="appname">Instajram</string>
    <string name="textlogout">LogOut</string>
    <string name="textaddstory">Add Story</string>
    <string name="judul">Title</string>
    <string name="akun">Don\'t have an account? Click SignUp Button</string>
    <string name="description">Description</string>
    <string name="descEdt">Add your description!</string>
    <string name="fab">FAB</string>
    <string name="title_activity_maps">Maps</string>

</resources>